...
        val CloudSunRain: LumenIconName get() = LumenIconName("cloud-sun-rain")
        val CloudSync: LumenIconName get() = LumenIconName("cloud-sync")
        val CloudUpload: LumenIconName get() = LumenIconName("cloud-upload")
        val Cloudy: LumenIconName get() = LumenIconName("cloudy")
        val Clover: LumenIconName get() = LumenIconName("clover")
        val Club: LumenIconName get() = LumenIconName("club")
        val Code: LumenIconName get() = LumenIconName("code")
        val CodeXml: LumenIconName get() = LumenIconName("code-xml")
        val Coffee: LumenIconName get() = LumenIconName("coffee")
        val Cog: LumenIconName get() = LumenIconName("cog")
        val Coins: LumenIconName get() = LumenIconName("coins")
        val Columns2: LumenIconName get() = LumenIconName("columns-2")
        val Columns3: LumenIconName get() = LumenIconName("columns-3")
...
